Jetpack and Powered Armor refactor (#1640)